# http_file_parser

./: Cargo.toml  README.md  makefile
src/: grammar.pest  main.rs  parser.rs  request.rs  test.http
tests/: grammar_test.rs  parser_test.rs
